(4.2.5p229) 2009/10/07 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1334] ntpsnmpd undefined reference to `ntpqOptions'.
* Change ntpsnmpd/Makefile.am include file order to fix FreeBSD build.
(4.2.5p228) 2009/10/06 Released by Harlan Stenn <stenn@ntp.org>
* Reclaim syntax tree memory after application in ntpd built with
  configure --disable-saveconfig.
* [Bug 1135] ntpq uses sizeof(u_long) where sizeof(u_int32) is meant.
* [Bug 1333] ntpd --interface precedence over --novirtualips lost.
(4.2.5p227) 2009/10/05 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1135] :config fails with "Server disallowed request"
* [Bug 1330] disallow interface/nic rules when --novirtualips or
  --interface are used.
* [Bug 1332] ntpq -c 'rv 0 variablename' returns extra stuff.
* Add test of ntpd --saveconfigquit fidelity using new complete.conf.
* Documentation updates from Dave Hart/Dave Mills.
(4.2.5p226) 2009/10/04 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1318] Allow multiple -g options on ntpd command line.
* [Bug 1327] ntpq, ntpdc, ntp-keygen -d & -D should work with configure
  --disable-debugging.
* Add ntpd --saveconfigquit <filename> option for future build-time
  testing of saveconfig fidelity.
* Clockhop and autokey cleanup from Dave Mills.
* Documentation updates from Dave Mills.
(4.2.5p225) 2009/09/30 Released by Harlan Stenn <stenn@ntp.org>
* authopt documentation changes from Dave Mills/Dave Hart.
* [Bug 1324] support bracketed IPv6 numeric addresses for restrict.
(4.2.5p224) 2009/09/29 Released by Harlan Stenn <stenn@ntp.org>
* Clockhop and documentation fixes from Dave Mills.
* Remove "tos maxhop" ntp.conf knob.
(4.2.5p223) 2009/09/28 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1321] build doesn't work if . isn't on $PATH.
* [Bug 1323] Implement "revoke #" to match documentation, deprecate
  "crypto revoke #".
(4.2.5p222) 2009/09/27 Released by Harlan Stenn <stenn@ntp.org>
* Update libisc code using bind-9.6.1-P1.tar.gz, rearrange our copy to