@@ -1,3 +1,4 @@
+* Broadcast and transit phase cleanup from Dave Mills.
 (4.2.5p229) 2009/10/07 Released by Harlan Stenn <stenn@ntp.org>
 * [Bug 1334] ntpsnmpd undefined reference to `ntpqOptions'.
 * Change ntpsnmpd/Makefile.am include file order to fix FreeBSD build.
